<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_large">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etProductName"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etGradeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etGradeName"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPhoneno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etMFI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etMFI"
                    android:inputType="phone"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etLocation"
                    android:inputType="textCapSentences"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/etPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/etPrice"
                        android:inputType="text"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilCurrency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/etCurrency"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/etCurrency"
                        android:inputType="text"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilQuality"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/etQuality"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/etQuality"
                        android:inputType="text"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilUnit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">>

                    <EditText
                        android:id="@+id/etUnit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/etUnit"
                        android:inputType="text"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/padding_tiny"
                android:paddingBottom="@dimen/padding_tiny"
                >

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtTermsCondition" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/padding_tiny"
                android:paddingBottom="@dimen/padding_tiny">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/txtBuyerContact"
                    android:textSize="22sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="horizontal"
                android:paddingTop="@dimen/padding_tiny"
                android:paddingBottom="@dimen/padding_tiny">

                <CheckBox
                    android:id="@+id/checkBoxw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cbEmail" />


                <CheckBox
                    android:id="@+id/checkBdox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cbPhone" />
            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="center"
            android:padding="@dimen/padding_medium">

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".75"
                android:background="@color/colorPrimary"
                android:text="@string/btnSubmit"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

        </LinearLayout>


        </LinearLayout>


    </ScrollView>

</android.support.design.widget.CoordinatorLayout>