<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_large">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_hint_name"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_hint_email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPhoneno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPhoneno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_hint_phoneno"
                    android:inputType="phone"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilUserType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etUserType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etTxtUserType"
                    android:inputType="textCapSentences"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/tvLinkUpgradePremium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_small"
                android:text="@string/link_upgradeToPrimium"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:padding="@dimen/padding_medium"
            android:gravity="center">
            <Button
                android:id="@+id/btnResetPass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".75"
                android:padding="@dimen/padding_medium"
                android:background="@color/colorPrimary"
                android:text="@string/btn_reset_password"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:padding="@dimen/padding_medium"
            android:gravity="center">
            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".75"
                android:padding="@dimen/padding_medium"
                android:background="@color/colorPrimary"
                android:text="@string/btnSave"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_medium" />


        </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>